Update script and stylesheet Add functionality to minus button, fix bugs causing clear button to not clear when there was no second number, add functionality to clear button which changes the text on it from "C" to "AC" depending on circumstance. Disable overflow in display.

--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ body {
     text-align: right;
     padding: 10px;
     font-family: sans-serif;
-    font-size: 60px;
+    font-size: 45px;
     margin-top: 12px;
     color: white;
+    overflow-x: hidden;
 }
 
 .button-containers {
